link and unlink commands