@@ -12,6 +12,7 @@ import net.minecraft.text.Text;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.List;
@@ -66,7 +67,7 @@ public class AspectReport {
 		parameters.forEach((key, value) -> urlBuilder.append(key).append("=").append(value).append("&"));
 
 		try {
-			URL url = new URL(urlBuilder.toString());
+			URL url = URI.create(urlBuilder.toString()).toURL();
 
 			HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 			conn.setRequestMethod("GET");
